--- a/functions/test-db/json2/scvo/scvo-styles.scss
+++ b/functions/test-db/json2/scvo/scvo-styles.scss
@@ -846,9 +846,13 @@ figure {
         padding: $spacing-unit 0;
     }
     .policy-stats {
-        padding: $spacing-unit 0;
+        padding: $spacing-unit*1.5 0;
         h2 {
             margin-top: 0;
+        }
+        .mdc-layout-grid__cell {
+            padding: $spacing-unit*1.5 0 $spacing-unit/2;
+            text-align: center;
         }
     }
 }
@@ -1800,7 +1804,8 @@ h1.support-sector {
         }
     }
 }
-.supplimentary-list .list {
+.supplimentary-list .list,
+.supplimentary-list .gist {
     .mdc-card__actions {
         padding-bottom: $spacing-unit/2 !important;
     }
