--- a/functions/test-db/json2/scvo/templates/pages/page-policy.hbs
+++ b/functions/test-db/json2/scvo/templates/pages/page-policy.hbs
@@ -30,25 +30,31 @@
             <h2>Third sector statistics</h2>
             <div class="mdc-layout-grid">
                 <div class="mdc-layout-grid__inner v-margin">
-                    <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
+                    <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
                         <span class="fal fa-fw fa-cogs fa-5x"> </span>
                     </div>
-                    <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
-                        <span class="fal fa-fw fa-cogs fa-5x"> </span>
+                    <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
+                        <span class="fal fa-fw fa-bullhorn fa-5x"> </span>
                     </div>
-                    <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
-                        <span class="fal fa-fw fa-cogs fa-5x"> </span>
+                    <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
+                        <span class="fal fa-fw fa-thumbs-up fa-5x"> </span>
+                    </div>
+                    <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
+                        <span class="fal fa-fw fa-calendar-alt fa-5x"> </span>
                     </div>
                 </div>
                 <div class="mdc-layout-grid__inner v-margin">
-                    <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
-                        <span class="fal fa-fw fa-cogs fa-5x"> </span>
+                    <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
+                        <span class="fal fa-fw fa-handshake fa-5x"> </span>
                     </div>
-                    <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
-                        <span class="fal fa-fw fa-cogs fa-5x"> </span>
+                    <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
+                        <span class="fal fa-fw fa-building fa-5x"> </span>
                     </div>
-                    <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
-                        <span class="fal fa-fw fa-cogs fa-5x"> </span>
+                    <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
+                        <span class="fal fa-fw fa-comments fa-5x"> </span>
+                    </div>
+                    <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
+                        <span class="fal fa-fw fa-chart-bar fa-5x"> </span>
                     </div>
                 </div>
             </div>
