--- a/functions/test-db/json2/scvo/scvo-styles.scss
+++ b/functions/test-db/json2/scvo/scvo-styles.scss
@@ -1175,6 +1175,7 @@ figure {
     margin: 0;
 }
 .mdc-temporary-drawer {
+    display: none;
     .mdc-temporary-drawer__header-content {
         direction: ltr;
         padding: $spacing-unit;
@@ -2477,10 +2478,12 @@ footer {
         border-bottom-style: solid;
         border-bottom-width: $spacing-unit/5;
     }
+    .about a,
     a {
         color: white;
         text-decoration: underline;
     }
+    .about a:hover,
     a:hover {
         color: white;
     }
@@ -2586,9 +2589,9 @@ footer {
 }
 
 @media screen and (max-width: 991px) {
-    // .mdc-temporary-drawer {
-    //     display: block;
-    // }
+    .mdc-temporary-drawer {
+        display: block;
+    }
     .mdc-toolbar {
         #upper-tab-bar,
         .mdc-toolbar__row.toolbar-nav {
