--- a/functions/test-db/json2/scvo/templates/events/event-digital-booking.hbs
+++ b/functions/test-db/json2/scvo/templates/events/event-digital-booking.hbs
@@ -29,7 +29,7 @@
             <div class="mdc-layout-grid">
                 <div class="mdc-layout-grid__inner">
                     <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-9-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone content event-content">
-                        <iframe src="http://www.surveygizmo.eu/s3/90064254/Event-Booking-Digital-Events" frameborder="0" width="100%" height="400" style="overflow:hidden"></iframe>
+                        <iframe src="https://www.surveygizmo.eu/s3/90064254/Event-Booking-Digital-Events" frameborder="0" width="100%" height="400" style="overflow:hidden"></iframe>
 
                         {{#compare course_type "===" "Training Course"}}
                         <p>
