--- a/functions/test-db/json2/scvo/partials/menu-services-membership.hbs
+++ b/functions/test-db/json2/scvo/partials/menu-services-membership.hbs
@@ -1,5 +1,5 @@
-<nav class="menu-sidebar" id="membership-menu">
-    {{#each context.menus.membership}}
+<nav class="menu-sidebar" id="services-membership-menu">
+    {{#each context.menus.services-membership}}
     <a class="menu-level-1 mdc-button mdc-button--raised{{#if match}} mdc-button--active{{/if}}" href="{{path}}">{{{label}}}</a>
     {{#each this.children}}
     <a class="menu-level-2 mdc-button mdc-button--raised{{#if match}} mdc-button--active{{/if}}" href="{{path}}">{{{label}}}</a>
