--- a/functions/test-db/json2/scvo/templates/pages/page-membership.hbs
+++ b/functions/test-db/json2/scvo/templates/pages/page-membership.hbs
@@ -11,7 +11,7 @@
                     {{/with}}
                 </div>
                 <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-3-tablet mdc-layout-grid__cell--span-4-phone content sidebar page-sidebar">
-                    {{> menu_membership}}
+                    {{> menu_services_membership}}
                 </div>
             </div>
         </div>
