--- a/functions/test-db/json2/scvo/scvo-styles.scss
+++ b/functions/test-db/json2/scvo/scvo-styles.scss
@@ -1736,6 +1736,19 @@ h1.mdc-typography--title {
 h1.support-sector {
     margin-top: $spacing-unit*3;
 }
+table.membership-fees {
+    border-collapse: collapse;
+    margin-bottom: $spacing-unit;
+    min-width: 40%;
+    tr {
+        th,
+        td {
+            border: 1px solid #ccc;
+            padding: $spacing-unit/4 $spacing-unit/2;
+        }
+    }
+}
+
 .section-projects {
     .mdc-card__media {
         height: 128px;
