--- a/functions/test-db/json2/scvo/scvo-styles.scss
+++ b/functions/test-db/json2/scvo/scvo-styles.scss
@@ -2280,6 +2280,9 @@ ul.supplimentary-list {
     margin-top: $spacing-unit/2;
     margin-bottom: $spacing-unit;
 }
+.digital.events .full .event-sidebar {
+    text-align: right;
+}
 
 h1,
 h2,
