--- a/functions/test-db/json2/scvo/templates/staff/staff.hbs
+++ b/functions/test-db/json2/scvo/templates/staff/staff.hbs
@@ -26,8 +26,11 @@
         </ul>
         <div class="mdc-layout-grid">
             <div class="mdc-layout-grid__inner">
-                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12 content page-content">
+                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-9-desktop mdc-layout-grid__cell--span-5-tablet mdc-layout-grid__cell--span-4-phone content page-content">
                     {{{primaryResponse.hits.hits.[0]._source.rendered.scvo_full}}}
+                </div>
+                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-3-tablet mdc-layout-grid__cell--span-4-phone sidebar page-sidebar">
+                    {{> menu_about}}
                 </div>
                 {{#compare supplimentaryResponses.author_posts.hits.total ">" 0}}
                 <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12 related page-related">
