--- a/functions/test-db/json2/scvo/scvo-styles.scss
+++ b/functions/test-db/json2/scvo/scvo-styles.scss
@@ -1600,6 +1600,12 @@ figure {
 .press-media .mdc-card__supporting-text {
     padding-bottom: $spacing-unit;
 }
+.press-media,
+.blogs {
+    .search-info {
+        margin-top: $spacing-unit/2;
+    }
+}
 
 .mdc-form-field,
 .mdc-button,
@@ -1934,13 +1940,19 @@ table.membership-fees {
         float: left;
     }
     dt {
-        font-weight: 600;
-        font-size: 1.15rem;
         clear: both;
         width: 30%;
     }
     dd {
         width: 70%;
+    }
+}
+.events .inline-dl {
+    dt {
+        font-weight: 600;
+        font-size: 1.15rem;
+    }
+    dd {
         margin: 0 0 $spacing-unit;
         .mdc-layout-grid__cell strong {
             font-size: 1.15rem;
@@ -2161,14 +2173,6 @@ ul.breadcrumbs {
 .about.staff-team {
     .scvo-staff-photo-full {
         margin: 0;
-    }
-    .inline-dl {
-        dt {
-            width: 20px;
-        }
-        dd {
-            width: calc(100% - 20px);
-        }
     }
 }
 .board-of-trustees .full .mdc-layout-grid img {
