--- a/functions/test-db/json2/scvo/templates/members/member-search.hbs
+++ b/functions/test-db/json2/scvo/templates/members/member-search.hbs
@@ -51,6 +51,8 @@
                             </div>
                         </div>
 
+                        {{> search_info}}
+
                         {{#each primaryResponse.hits.hits}}
                         {{{this._source.rendered.list}}}
                         {{/each}}
