--- a/functions/test-db/json2/scvo/templates/pages/page-blogs.hbs
+++ b/functions/test-db/json2/scvo/templates/pages/page-blogs.hbs
@@ -1,27 +1,32 @@
 <div class="page posts blogs">
     {{> header_splash}}
     <div class="container-fluid">
-        {{#> handle_404}}
         {{> breadcrumbs_posts}}
         <div class="mdc-layout-grid">
             <div class="mdc-layout-grid__inner">
                 <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-8-desktop mdc-layout-grid__cell--span-5-tablet mdc-layout-grid__cell--span-4-phone content post-content">
+                    {{#compare primaryResponse.hits.total ">" 0}}
+                    {{> search_info}}
                     <ul class="supplimentary-list">
-                        {{#each supplimentaryResponses.related_posts.hits.hits}}
+                        {{#each primaryResponse.hits.hits}}
                         {{{_source.rendered.list}}}
                         {{/each}}
                     </ul>
                     {{> pagination}}
+                    {{else}}
+                    <p>
+                        No posts by this author could be loaded.
+                    </p>
+                    {{/compare}}
                 </div>
                 <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-3-tablet mdc-layout-grid__cell--span-4-phone sidebar post-sidebar">
                     {{> wee_search title="Search posts" searchRoute="main_search" extraParams='{ "type": "scvo-cms-post" }'}}
 
-                    {{#with primaryResponse.hits.hits.[0]._source}}
+                    {{#with supplimentaryResponses.page.hits.hits.[0]._source}}
                     {{{rendered.full}}}
                     {{/with}}
                 </div>
             </div>
         </div>
-        {{/handle_404}}
     </div>
 </div>
