--- a/functions/test-db/json2/scvo/templates/posts/post-author.hbs
+++ b/functions/test-db/json2/scvo/templates/posts/post-author.hbs
@@ -23,12 +23,21 @@
         <div class="mdc-layout-grid">
             <div class="mdc-layout-grid__inner">
                 <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-8-desktop mdc-layout-grid__cell--span-5-tablet mdc-layout-grid__cell--span-4-phone content post-content">
+                    {{#compare supplimentaryResponses.author_posts.hits.total ">" 0}}
+                    {{#compare supplimentaryResponses.author_posts.hits.total ">" 10}}
+                    {{> search_info}}
+                    {{/compare}}
                     <ul class="supplimentary-list">
                         {{#each supplimentaryResponses.author_posts.hits.hits}}
                         {{{_source.rendered.list}}}
                         {{/each}}
                     </ul>
                     {{> pagination}}
+                    {{else}}
+                    <p>
+                        No posts by this author could be loaded.
+                    </p>
+                    {{/compare}}
                 </div>
                 <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-3-tablet mdc-layout-grid__cell--span-4-phone sidebar post-sidebar">
                     <div class="author_about">
