--- a/functions/test-db/json2/scvo/templates/posts/post-category.hbs
+++ b/functions/test-db/json2/scvo/templates/posts/post-category.hbs
@@ -26,12 +26,19 @@
         <div class="mdc-layout-grid">
             <div class="mdc-layout-grid__inner">
                 <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-8-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone content post-content">
+                    {{#compare primaryResponse.hits.total ">" 0}}
+                    {{> search_info}}
                     <ul class="supplimentary-list">
                         {{#each primaryResponse.hits.hits}}
                         {{{_source.rendered.list}}}
                         {{/each}}
                     </ul>
                     {{> pagination}}
+                    {{else}}
+                    <p>
+                        No posts in this category could be loaded.
+                    </p>
+                    {{/compare}}
                 </div>
                 <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone sidebar post-sidebar">
                     <!-- TBC -->
