--- a/functions/test-db/json2/scvo/scvo-styles.scss
+++ b/functions/test-db/json2/scvo/scvo-styles.scss
@@ -1947,6 +1947,23 @@ table.membership-fees {
         width: 70%;
     }
 }
+.staff-team .inline-dl {
+    margin: 0;
+    dt, dd {
+        float: left;
+        margin: 0;
+    }
+    dt {
+        clear: both;
+        width: 20%;
+    }
+    dd {
+        width: 80%;
+        ul {
+            margin: 0 0 0 1.4rem;
+        }
+    }
+}
 .events .inline-dl {
     dt {
         font-weight: 600;
@@ -1990,16 +2007,16 @@ table.membership-fees {
             top: 0em;
         }
     }
-    // ul.fa-ul {
-    //     li {
-    //         padding-left: 0;
-    //     }
-    //     li::before {
-    //         content: " ";
-    //         padding: 0;
-    //         margin: 0;
-    //     }
-    // }
+    ul.fa-ul {
+        li {
+            padding-left: 0;
+        }
+        li::before {
+            content: " ";
+            padding: 0;
+            margin: 0;
+        }
+    }
     .mdc-button {
         // background: white;
         border-width: $spacing-unit/8;
@@ -2011,17 +2028,6 @@ table.membership-fees {
     .scvo-cms-page-20114 .mdc-button {
         margin-top: 0;
     }
-    // .menu-sidebar,
-    // .mdc-card {
-    //     .mdc-button {
-    //         margin-top: 0;
-    //         border: none;
-    //         box-shadow: none;
-    //         text-align: left;
-    //         background-color: rgba(0,0,0,0.05);
-    //         padding-top: 2px;
-    //     }
-    // }
     .mdc-card__actions ul,
     ul.supplimentary-list,
     ul.inline-list {
@@ -2171,6 +2177,9 @@ ul.breadcrumbs {
     margin-top: -0.15rem;
 }
 .about.staff-team {
+    .read-more {
+        margin-top: $spacing-unit;
+    }
     .scvo-staff-photo-full {
         margin: 0;
     }
