--- a/functions/test-db/json2/scvo/scvo-styles.scss
+++ b/functions/test-db/json2/scvo/scvo-styles.scss
@@ -1959,6 +1959,7 @@ table.membership-fees {
     }
     dd {
         width: 80%;
+        margin: 0 0 $spacing-unit/2;
         ul {
             margin: 0 0 0 1.4rem;
         }
