--- a/functions/test-db/json2/scvo/templates/pages/page-press.hbs
+++ b/functions/test-db/json2/scvo/templates/pages/page-press.hbs
@@ -1,5 +1,22 @@
 <div class="page posts press">
-    {{> header_splash}}
+    <div class="splash-image splash-image-{{supplimentaryResponses.page.hits.hits.[0]._type}}" style="{{> header_splash_image}}">
+        <div class="splash-overlay{{#if supplimentaryResponses.page.hits.hits.[0]._source.hide_overlay}} splash-overlay-hidden{{/if}}">
+            <div class="container-fluid">
+                <div class="mdc-layout-grid">
+                    {{#if supplimentaryResponses.page.hits.hits.[0]._source.header_text}}
+                    <img src="{{supplimentaryResponses.page.hits.hits.[0]._source.header_text}}" alt="{{supplimentaryResponses.page.hits.hits.[0]._source.title}}" class="header-text" />
+                    {{else}}
+                    <h1 class="header-text">
+                        <span class="header-text-banner">
+                            Press &amp; media
+                        </span>
+                    </h1>
+                    {{/if}}
+                </div>
+                {{> header_caption}}
+            </div>
+        </div>
+    </div>
     <div class="container-fluid">
         {{> breadcrumbs_posts}}
         <div class="mdc-layout-grid">
