--- a/functions/test-db/json2/scvo/templates/posts/post-author-head-tags.hbs
+++ b/functions/test-db/json2/scvo/templates/posts/post-author-head-tags.hbs
@@ -1,5 +1,5 @@
-{{#if primaryResponse.hits.hits.[0]}}
-    {{#with primaryResponse.hits.hits.[0]._source}}
+{{#if supplimentaryResponses.author_profile.hits.hits.[0]}}
+    {{#with supplimentaryResponses.author_profile.hits.hits.[0]._source}}
         <title>SCVO – Posts by {{{name_full}}}</title>
         <meta property="og:title" content="SCVO – Posts by {{{name_full}}}" data-dynamic="true">
 
