--- a/functions/test-db/json2/scvo/scvo-styles.scss
+++ b/functions/test-db/json2/scvo/scvo-styles.scss
@@ -2294,8 +2294,13 @@ ul.supplimentary-list {
     margin-top: $spacing-unit/2;
     margin-bottom: $spacing-unit;
 }
-.digital.events .full .event-sidebar {
-    text-align: right;
+.digital.events .full {
+    .scvo-event-digital-brand-charter {
+        
+    }
+    .event-sidebar {
+        text-align: right;
+    }
 }
 
 h1,
