--- a/functions/test-db/json2/scvo/scvo-styles.scss
+++ b/functions/test-db/json2/scvo/scvo-styles.scss
@@ -2296,7 +2296,7 @@ ul.supplimentary-list {
 }
 .digital.events .full {
     .scvo-event-digital-brand-charter {
-        
+
     }
     .event-sidebar {
         text-align: right;
@@ -2797,6 +2797,10 @@ footer {
         .container-fluid {
             .mdc-layout-grid {
                 width: 100%;
+                h1.header-text {
+                    font-size: 2rem;
+                    line-height: 2.5rem;
+                }
             }
         }
     }
