--- a/functions/test-db/json2/scvo/scvo-styles.scss
+++ b/functions/test-db/json2/scvo/scvo-styles.scss
@@ -2411,6 +2411,7 @@ p:last-child {
         top: -0.1rem;
         position: relative;
     }
+    a.noext::after,
     a[href^="https://storage.googleapis.com"]::after,
     a[href^="https://maps.google.co.uk"]::after,
     a[href^="http://goodhq.org"]::after,
