--- a/functions/test-db/json2/scvo/scvo-styles.scss
+++ b/functions/test-db/json2/scvo/scvo-styles.scss
@@ -556,6 +556,8 @@ primary-dark: #251032
 .page-related,
 .page-sidebar .static-sidebar,
 .page-sidebar.static-sidebar,
+.post-sidebar .static-sidebar,
+.post-sidebar.static-sidebar,
 .policy-research.events .event-content,
 .policy-research.events .event-sidebar,
 .posts.blogs .post-sidebar,
@@ -2289,7 +2291,7 @@ ul.supplimentary-list {
         display: none;
     }
 }
-.sidebar .author_about,
+.sidebar .author-about,
 .content .supplimentary-list {
     margin-top: $spacing-unit/2;
     margin-bottom: $spacing-unit;
