--- a/functions/test-db/json2/scvo/templates/posts/post-amp.hbs
+++ b/functions/test-db/json2/scvo/templates/posts/post-amp.hbs
@@ -15,7 +15,7 @@
             </ul>
         {{else}}
             {{#if primaryResponse.hits.hits.[0]._source.categories}}
-                <div class="author_about">
+                <div class="author-about">
                     {{#if supplimentaryResponses.staff_profile.hits.hits.[0]}}
                         {{{supplimentaryResponses.staff_profile.hits.hits.[0]._source.rendered.scvo_profile}}}
                     {{else}}
