--- a/functions/test-db/json2/scvo/templates/posts/post-author.hbs
+++ b/functions/test-db/json2/scvo/templates/posts/post-author.hbs
@@ -40,7 +40,7 @@
                     {{/compare}}
                 </div>
                 <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-3-tablet mdc-layout-grid__cell--span-4-phone sidebar post-sidebar">
-                    <div class="author_about">
+                    <div class="author-about static-sidebar">
                         {{#if supplimentaryResponses.staff_profile.hits.hits.[0]}}
                         {{{supplimentaryResponses.staff_profile.hits.hits.[0]._source.rendered.scvo_profile}}}
                         {{else}}
