--- a/functions/test-db/json2/scvo/scvo-styles.scss
+++ b/functions/test-db/json2/scvo/scvo-styles.scss
@@ -150,6 +150,7 @@ primary-dark: #251032
     a,
     #share-menu-button,
     .mdc-simple-menu .mdc-list-item,
+    .social .fa-fw,
     .mdc-theme--primary {
         color: map-get($themeSelected, 'primary');
     }
@@ -931,6 +932,21 @@ figure {
     margin-top: 0;
 }
 
+.c-align {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -ms-flex-flow: row nowrap;
+    flex-flow: row nowrap;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+}
 .hero {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -1753,6 +1769,13 @@ table.membership-fees {
         td {
             border: 1px solid #ccc;
             padding: $spacing-unit/4 $spacing-unit/2;
+        }
+    }
+}
+.community-jobs-scotland {
+    .grid-info {
+        .social {
+            text-align: center;
         }
     }
 }
