--- a/functions/test-db/json2/scvo/scvo-styles.scss
+++ b/functions/test-db/json2/scvo/scvo-styles.scss
@@ -1504,6 +1504,7 @@ figure {
 .about.work-with-us .page-info,
 .digital.charter-fund.projects .page-info,
 .digital.cyber-resilience.projects .page-info,
+.community-jobs-scotland .footer-image.join-our-hub,
 .projects-campaigns.terrific-trustees.search .page-info,
 .scvo-cms-page-20027 .page-info,
 .scvo-cms-page-20043 .page-info,
