--- a/functions/test-db/json2/scvo/templates/grants/grant-cyber-search.hbs
+++ b/functions/test-db/json2/scvo/templates/grants/grant-cyber-search.hbs
@@ -34,9 +34,9 @@
 
                     <hr />
 
-                    {{> search_info}}
+                    <!-- {{> search_info}} -->
 
-                    <div class="mdc-layout-grid equal-height">
+                    <div class="mdc-layout-grid equal-height v-margin">
                         <div class="mdc-layout-grid__inner">
                             {{#each primaryResponse.hits.hits}}
                             <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
