--- a/functions/test-db/json2/goodhq/templates/home.hbs
+++ b/functions/test-db/json2/goodhq/templates/home.hbs
@@ -39,7 +39,7 @@
                         </button>
                     </div>
                     <div class="col-xs-12 col-sm-4 tight">
-                        <button class="btn btn-icon btn-inverse" href="/search?type=goodmoves-legacy">
+                        <button class="btn btn-icon btn-inverse" href="/search?type=goodmoves-job">
                             <span class="glyphicon glyphicon-briefcase left" aria-hidden="true"></span>
                             Work
                         </button>
