--- a/functions/test-db/json2/goodhq/templates/search.hbs
+++ b/functions/test-db/json2/goodhq/templates/search.hbs
@@ -15,7 +15,7 @@
                             <option value="goodhq-organisation" {{#compare ../params.query.type "===" "goodhq-organisation"}}selected{{/compare}}>Causes</option>
                             <option value="goodhq-post" {{#compare ../params.query.type "===" "goodhq-post"}}selected{{/compare}}>Posts</option>
                             <option value="milo-volunteering-opportunity" {{#compare ../params.query.type "===" "milo-volunteering-opportunity"}}selected{{/compare}}>Volunteering opportunities</option>
-                            <option value="goodmoves-legacy" {{#compare ../params.query.type "===" "goodmoves-legacy"}}selected{{/compare}}>Jobs</option>
+                            <option value="goodmoves-job" {{#compare ../params.query.type "===" "goodmoves-job"}}selected{{/compare}}>Jobs</option>
                         </select>
                     </div>
                     <button type="submit" class="mdc-button mdc-button--raised" aria-label="Search" alt="Search">
