--- a/functions/test-db/json2/scvo/templates/main_search/search.hbs
+++ b/functions/test-db/json2/scvo/templates/main_search/search.hbs
@@ -64,7 +64,7 @@
                         {{>filter_checkbox label="Posts" value="goodhq-post"}}
 
                         <h3>Goodmoves</h3>
-                        {{>filter_checkbox label="Jobs" value="goodmoves-legacy"}}
+                        {{>filter_checkbox label="Jobs" value="goodmoves-job"}}
 
                         <h3>TFN</h3>
                         {{>filter_checkbox label="Blog posts" value="tfn-blog-post"}}
