--- a/functions/test-db/json2/scvo/scvo-styles.scss
+++ b/functions/test-db/json2/scvo/scvo-styles.scss
@@ -672,7 +672,7 @@ figure {
     color: #333;
     border-width: $spacing-unit/8;
     border-style: solid;
-    border-color: #eee;
+    border-color: #333;
     padding: 0  $spacing-unit/2;
     margin: 0;
     width: 100%;
@@ -1507,6 +1507,8 @@ figure {
 .digital.cyber-resilience.projects .page-info,
 .community-jobs-scotland .footer-image.join-our-hub,
 .projects-campaigns.terrific-trustees.search .page-info,
+.post-sidebar .page-info,
+.page-sidebar .page-info,
 .scvo-cms-page-20027 .page-info,
 .scvo-cms-page-20043 .page-info,
 .scvo-cms-page-20042 .page-info,
@@ -1917,12 +1919,12 @@ table.membership-fees {
 
 .search-info {
     margin-bottom: 1rem;
-    border: 0.125rem solid #eee;
+    border: 0.125rem solid #ddd;
     background: #f8f8f8;
     color: #555;
     padding: 0 0.5rem;
-    height: 35px;
-    line-height: 35px;
+    height: 2.5rem;
+    line-height: 2.33rem;
     box-sizing: border-box;
 }
 
@@ -2386,6 +2388,7 @@ p:last-child {
 }
 .post-content .full {
     margin-top: $spacing-unit/2;
+    word-wrap: break-word;
 }
 .page.press .post-sidebar .full {
     margin-top: 0;
@@ -2657,6 +2660,7 @@ footer {
     }
     .mdc-toolbar {
         #upper-tab-bar,
+        .upper-menu,
         .mdc-toolbar__row.toolbar-nav {
             display: none;
         }
