--- a/functions/test-db/json2/scvo/templates/layout.hbs
+++ b/functions/test-db/json2/scvo/templates/layout.hbs
@@ -50,7 +50,7 @@
                                 </a>
                             </span>
                         </section>
-                        <section class="mdc-toolbar__section mdc-toolbar__section--align-end">
+                        <section class="mdc-toolbar__section upper-menu mdc-toolbar__section--align-end">
                             <nav id="upper-tab-bar" class="mdc-tab-bar" [menu]="'main-upper'" [menulinkselector]="''" [menulabelselector]="'span.mdc-tab--label'" [menuactiveclass]="'mdc-tab--active'">
                                 {{#each menus.main-upper}}
                                 <a class="mdc-tab{{#if match}} mdc-tab--active{{/if}}" href="{{path}}"><span class="mdc-tab--label">{{{label}}}</span></a>
