--- a/functions/test-db/json2/scvo/templates/posts/post.hbs
+++ b/functions/test-db/json2/scvo/templates/posts/post.hbs
@@ -48,7 +48,9 @@
                     {{/if}}
                     {{/if}}
                 </div>
-                {{#compare supplimentaryResponses.tfn_related_posts.hits.total ">" 0}}
+            </div>
+            {{#compare supplimentaryResponses.tfn_related_posts.hits.total ">" 0}}
+            <div class="mdc-layout-grid__inner">
                 <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12 related post-related post-related-tfn">
                     <h3>Related articles on <a href="http://thirdforcenews.org.uk">Third Force News</a></h3>
                     <div class="mdc-layout-grid">
@@ -61,8 +63,8 @@
                         </div>
                     </div>
                 </div>
-                {{/compare}}
             </div>
+            {{/compare}}
         </div>
         {{/handle_404}}
     </div>
