--- a/functions/test-db/json2/scvo/scvo-styles.scss
+++ b/functions/test-db/json2/scvo/scvo-styles.scss
@@ -1422,9 +1422,9 @@ figure {
         margin: 0 !important;
         color: #fff;
         font-weight: 800;
-        font-size: 3rem;
-        line-height: $spacing-unit*3.5;
-        letter-spacing: -0.08rem;
+        font-size: 2.9rem;
+        line-height: 3rem;
+        letter-spacing: -0.06rem;
         margin-bottom: $spacing-unit/2;
         .photo-wee {
             height: 64px;
