Change to home page

--- a/functions/test-db/json2/scvo/scvo-styles.scss
+++ b/functions/test-db/json2/scvo/scvo-styles.scss
@@ -765,7 +765,7 @@ figure {
         }
         .featured-text,
         .featured-background-image {
-            padding: $spacing-unit*2 0;
+            padding: 0 0 $spacing-unit*2;
         }
         .featured-background-image {
             background-size: cover;
