Home page styling

--- a/functions/test-db/json2/scvo/scvo-styles.scss
+++ b/functions/test-db/json2/scvo/scvo-styles.scss
@@ -763,11 +763,11 @@ figure {
                 padding-bottom: $spacing-unit/2;
             }
         }
-        .featured-text,
-        .featured-background-image {
+        .featured-text {
             padding: 0 0 $spacing-unit*2;
         }
         .featured-background-image {
+            padding: $spacing-unit*2 0;
             background-size: cover;
             background-repeat: no-repeat;
             background-position: center center;
