--- a/functions/test-db/json2/scvo/templates/pages/home.hbs
+++ b/functions/test-db/json2/scvo/templates/pages/home.hbs
@@ -113,7 +113,7 @@
                         </a>
                     </div>
                     <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-8 mdc-layout-grid__cell--span-5-tablet mdc-layout-grid__cell--span-4-phone">
-                        <p>
+                        <p style="padding-top: 2.5rem; line-height: 1.6rem; font-size: 1.3rem;">
                             Here at SCVO, we love charities. We believe every person who works to make a difference to Scottish communities should be valued, and that includes our colleagues who have come from other EU countries to live and work here. Scotland’s third sector is strengthened thanks to their contribution…
                             <a ng-reflect-router-link="/projects-campaigns/europe-and" href="/projects-campaigns/europe-and-the-third-sector/eu-are-valued">Read more</a>
                         </p>
