--- a/functions/test-db/json2/scvo/templates/pages/home.hbs
+++ b/functions/test-db/json2/scvo/templates/pages/home.hbs
@@ -197,9 +197,9 @@
                     <h2>
                         Latest SCVO blog posts
                     </h2>
-                    {{#each supplimentaryResponses.blogs_latest.hits.hits}}
-                    {{{_source.rendered.gist}}}
-                    {{/each}}
+                    {{{supplimentaryResponses.blogs_latest.hits.hits.[1]_source.rendered.gist}}}
+                    {{{supplimentaryResponses.blogs_latest.hits.hits.[2]_source.rendered.gist}}}
+                    {{{supplimentaryResponses.blogs_latest.hits.hits.[3]_source.rendered.gist}}}
                     <h2>
                         <a href="/blogs">Read more SCVO blogs</a>
                     </h2>
