--- a/functions/test-db/json2/scvo/templates/pages/home.hbs
+++ b/functions/test-db/json2/scvo/templates/pages/home.hbs
@@ -195,7 +195,7 @@
             <div class="mdc-layout-grid__inner">
                 <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone">
                     <h2>
-                        Latest SCVO blog posts
+                        Recent SCVO blog posts
                     </h2>
                     {{{supplimentaryResponses.blogs_latest.hits.hits.[1]._source.rendered.gist}}}
                     {{{supplimentaryResponses.blogs_latest.hits.hits.[2]._source.rendered.gist}}}
