Members query change

--- a/functions/test-db/json2/scvo/templates/members/member-search.hbs
+++ b/functions/test-db/json2/scvo/templates/members/member-search.hbs
@@ -60,7 +60,7 @@
                         {{/if}}
 
                         {{#each primaryResponse.hits.hits}}
-                        {{{this._source.rendered.list}}}
+                        {{{this._source.rendered.scvo_list}}}
                         {{/each}}
 
                         {{#ifAny params.query.q params.query.type}}
