--- a/functions/test-db/json2/scvo/templates/members/member.hbs
+++ b/functions/test-db/json2/scvo/templates/members/member.hbs
@@ -17,7 +17,7 @@
                 <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-9-desktop mdc-layout-grid__cell--span-5-tablet mdc-layout-grid__cell--span-4-phone content page-content">
                     {{#if primaryResponse.hits.hits.[0]}}
                     {{#with primaryResponse.hits.hits.[0]._source}}
-                    {{{rendered.full}}}
+                    {{{rendered.scvo_full}}}
                     {{/with}}
                     {{else}}
                     <h2>Page not found</h2>
